# pyToolkit

./: pyproject.toml
src/pyToolKit/: cfg.py
