[tool.poetry]
name = "pytoolkit"
version = "0.1.0"
description = "My Python Toolkit"
authors = ["hoefkensj <hoefkens.j@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
